--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stageset</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
     <style>
       * {
         margin: 0;
@@ -18,16 +12,16 @@
       }
 
       :root {
-        --bg-dark: #0a0a0f;
-        --bg-card: #16161d;
-        --text-primary: #f0f0f5;
-        --text-muted: #8888aa;
-        --border-subtle: #2a2a3a;
-        --accent: #6366f1;
+        --bg-dark: #0a0a0a;
+        --bg-card: #111111;
+        --text-primary: #e0e0e0;
+        --text-muted: #777777;
+        --border: #e0e0e0;
+        --accent: #ffffff;
       }
 
       body {
-        font-family: "Instrument Sans", sans-serif;
+        font-family: "Courier New", Courier, monospace;
         background: var(--bg-dark);
         color: var(--text-primary);
         min-height: 100vh;
@@ -36,39 +30,40 @@
       }
 
       header {
-        padding: 2rem;
-        text-align: center;
-        border-bottom: 1px solid var(--border-subtle);
+        padding: 1.5rem 2rem;
+        border-bottom: 3px solid var(--border);
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
       }
 
       header h1 {
-        font-size: 1.5rem;
-        font-weight: 600;
-        letter-spacing: 0.1em;
+        font-size: 1.25rem;
+        font-weight: 700;
+        letter-spacing: 0.25em;
         text-transform: uppercase;
-        color: var(--text-muted);
+        color: var(--text-primary);
       }
 
       .status {
-        margin-top: 0.5rem;
-        font-size: 0.875rem;
+        font-size: 0.75rem;
         display: flex;
         align-items: center;
-        justify-content: center;
         gap: 0.5rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        color: var(--text-muted);
       }
 
       .status-dot {
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        background: #ef4444;
-        transition: background 0.3s;
+        width: 10px;
+        height: 10px;
+        background: #ff0000;
+        border: 2px solid var(--text-primary);
       }
 
       .status-dot.connected {
-        background: #22c55e;
-        box-shadow: 0 0 8px #22c55e88;
+        background: #00ff00;
       }
 
       main {
@@ -81,16 +76,18 @@
 
       .button-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-        gap: 1rem;
-        max-width: 600px;
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+        gap: 0;
+        max-width: 700px;
         width: 100%;
+        border: 3px solid var(--border);
       }
 
       .notification-btn {
         aspect-ratio: 1;
-        border: 1px solid var(--border-subtle);
-        border-radius: 16px;
+        border: none;
+        border-right: 3px solid var(--border);
+        border-bottom: 3px solid var(--border);
         background: var(--bg-card);
         cursor: pointer;
         display: flex;
@@ -98,32 +95,23 @@
         align-items: center;
         justify-content: center;
         gap: 0.75rem;
-        transition: all 0.2s ease;
         position: relative;
-        overflow: hidden;
-      }
-
-      .notification-btn::before {
-        content: "";
-        position: absolute;
-        inset: 0;
-        opacity: 0;
-        transition: opacity 0.2s;
+        color: var(--text-primary);
+        font-family: inherit;
       }
 
       .notification-btn:hover {
-        transform: translateY(-2px);
-        border-color: var(--btn-color, var(--accent));
-        box-shadow: 0 8px 32px -8px var(--btn-color, var(--accent));
+        background: var(--text-primary);
+        color: var(--bg-dark);
       }
 
-      .notification-btn:hover::before {
-        opacity: 0.1;
-        background: var(--btn-color, var(--accent));
+      .notification-btn:hover .label {
+        color: var(--bg-dark);
       }
 
       .notification-btn:active {
-        transform: scale(0.96);
+        background: var(--accent);
+        color: var(--bg-dark);
       }
 
       .notification-btn .icon {
@@ -132,11 +120,12 @@
       }
 
       .notification-btn .label {
-        font-size: 0.875rem;
-        font-weight: 600;
+        font-size: 0.7rem;
+        font-weight: 700;
         color: var(--text-muted);
         text-transform: uppercase;
-        letter-spacing: 0.05em;
+        letter-spacing: 0.15em;
+        font-family: inherit;
       }
 
       /* Fullscreen notification overlay */
@@ -148,12 +137,11 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 1rem;
         opacity: 0;
         visibility: hidden;
         transition:
-          opacity 0.3s ease,
-          visibility 0.3s;
+          opacity 0.1s,
+          visibility 0.1s;
       }
 
       .notification-overlay.active {
@@ -166,31 +154,31 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 1rem;
+        gap: 1.5rem;
         text-align: center;
-        animation: pulse 0.5s ease-out;
+        animation: slam 0.15s ease-out;
+        border: 6px solid currentColor;
+        padding: 3rem 4rem;
       }
 
       .notification-overlay .emoji-large {
-        font-size: clamp(4rem, 20vw, 12rem);
+        font-size: clamp(4rem, 20vw, 10rem);
         line-height: 1;
       }
 
       .notification-overlay .label-large {
-        font-size: clamp(2rem, 8vw, 4rem);
-        font-weight: 600;
+        font-size: clamp(1.5rem, 6vw, 3.5rem);
+        font-weight: 700;
         text-transform: uppercase;
-        letter-spacing: 0.1em;
-        line-height: 1.2;
+        letter-spacing: 0.2em;
+        line-height: 1;
+        font-family: "Courier New", Courier, monospace;
       }
 
-      @keyframes pulse {
+      @keyframes slam {
         0% {
-          transform: scale(0.8);
+          transform: scale(1.3);
           opacity: 0;
-        }
-        50% {
-          transform: scale(1.05);
         }
         100% {
           transform: scale(1);
@@ -208,7 +196,7 @@
       }
 
       .notification-overlay.hiding {
-        animation: fadeOut 0.3s ease-out forwards;
+        animation: fadeOut 0.15s ease-out forwards;
       }
     </style>
   </head>
@@ -310,7 +298,7 @@
           notificationOverlay.classList.add("hiding");
           setTimeout(() => {
             notificationOverlay.classList.remove("active", "hiding");
-          }, 300);
+          }, 150);
         }, 3000);
       }
 
